Adatszerkezet tananyag és navigálógombok készen vannak

--- a/app/src/main/res/layout/activity_python_course03_structures.xml
+++ b/app/src/main/res/layout/activity_python_course03_structures.xml
@@ -1,9 +1,267 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/background"
     tools:context=".PythonCourse_03_StructuresActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/structuresPy"
+            android:text="@string/stPy"
+            android:layout_marginTop="20sp"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="30sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas01"
+            android:layout_below="@+id/structuresPy"
+            android:layout_marginStart="10sp"
+            android:layout_marginEnd="10sp"
+            android:layout_marginTop="20sp"
+            android:text="@string/manipulatePy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas02"
+            android:layout_below="@+id/felsorolas01"
+            android:layout_marginStart="10sp"
+            android:layout_marginEnd="10sp"
+            android:layout_marginTop="15sp"
+            android:text="@string/listPy"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas03"
+            android:layout_below="@+id/felsorolas02"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/listPython"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:id="@+id/listPython"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/felsorolas03"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="50sp"
+            android:layout_marginTop="10dp"
+            app:drawableTopCompat="@drawable/listapyimg" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas04"
+            android:layout_below="@+id/listPython"
+            android:layout_marginTop="15sp"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:textStyle="bold"
+            android:text="@string/tuplesPy"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas05"
+            android:layout_below="@+id/felsorolas04"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/tuples"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/modulPython"
+            android:layout_below="@+id/felsorolas05"
+            android:layout_marginStart="50sp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10sp"
+            app:drawableTopCompat="@drawable/tuplespyimg">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas06"
+            android:layout_below="@+id/modulPython"
+            android:layout_marginTop="15sp"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:textStyle="bold"
+            android:text="@string/dictPy"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas07"
+            android:layout_below="@+id/felsorolas06"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/dictionaryPy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/dictionaryPython"
+            android:layout_below="@+id/felsorolas07"
+            android:layout_marginStart="50sp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10sp"
+            app:drawableTopCompat="@drawable/dictionarypyimg">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas13"
+            android:layout_below="@+id/dictionaryPython"
+            android:layout_marginTop="10sp"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:textStyle="bold"
+            android:text="@string/setsPy"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas14"
+            android:layout_below="@+id/felsorolas13"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/halmazPy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/setPython"
+            android:layout_below="@+id/felsorolas14"
+            android:layout_marginStart="150sp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10sp"
+            app:drawableTopCompat="@drawable/setpyimg">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas15"
+            android:layout_below="@+id/setPython"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:text="@string/muveletekPy"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas16"
+            android:layout_below="@+id/felsorolas15"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/muveletekPython"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/muveletPy"
+            android:layout_below="@+id/felsorolas16"
+            android:layout_marginStart="90sp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10sp"
+            app:drawableTopCompat="@drawable/muveletpyimg">
+        </TextView>
+
+        <Button
+            android:id="@+id/backPythonCourseList03"
+            android:layout_width="130dp"
+            android:layout_height="50dp"
+            android:layout_below="@+id/muveletPy"
+            android:layout_marginStart="40sp"
+            android:layout_marginEnd="250sp"
+            android:fontFamily="@font/aldrich"
+            android:text="@string/backToJavaCourseList"
+            android:textColor="@color/white"
+            app:icon="?attr/actionModeCloseDrawable" />
+
+        <Button
+            android:id="@+id/nextCoursePython03"
+            android:layout_width="190dp"
+            android:layout_height="50dp"
+            android:layout_below="@+id/muveletPy"
+            android:layout_marginStart="190sp"
+            android:layout_marginEnd="40sp"
+            android:fontFamily="@font/aldrich"
+            android:text="@string/regexPy"
+            android:textColor="@color/white"
+            app:icon="@drawable/iconnext" />
+    </RelativeLayout>
+
+</ScrollView>
