--- a/app/src/main/res/layout/activity_python_course02_modules.xml
+++ b/app/src/main/res/layout/activity_python_course02_modules.xml
@@ -314,14 +314,14 @@
 
         <Button
             android:id="@+id/nextCoursePython02"
-            android:layout_width="150dp"
+            android:layout_width="130dp"
             android:layout_height="50dp"
             android:layout_below="@+id/felsorolas15"
             android:layout_marginStart="230sp"
             android:layout_marginEnd="40sp"
             android:layout_marginTop="20sp"
             android:fontFamily="@font/aldrich"
-            android:text="@string/adatszerkezetekPy"
+            android:text="@string/listsPy"
             android:textColor="@color/white"
             app:icon="@drawable/iconnext" />
     </RelativeLayout>
