--- a/app/src/main/res/layout/activity_python_course04_reg_ex.xml
+++ b/app/src/main/res/layout/activity_python_course04_reg_ex.xml
@@ -1,9 +1,252 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".PythonCourse_04_RegExActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/regexPy"
+            android:text="@string/regex"
+            android:layout_marginTop="20sp"
+            android:layout_marginStart="10sp"
+            android:layout_marginEnd="10sp"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="30sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas01"
+            android:layout_below="@+id/regexPy"
+            android:layout_marginStart="10sp"
+            android:layout_marginEnd="10sp"
+            android:layout_marginTop="15sp"
+            android:text="@string/literalsPy"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas03"
+            android:layout_below="@+id/felsorolas01"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/literalokPy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:id="@+id/textPython"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/felsorolas03"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="100sp"
+            android:layout_marginTop="10dp"
+            app:drawableTopCompat="@drawable/literalspyimg" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas04"
+            android:layout_below="@+id/textPython"
+            android:layout_marginTop="15sp"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:textStyle="bold"
+            android:text="@string/stringsPy"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas05"
+            android:layout_below="@+id/felsorolas04"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/concatPy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/concatPython"
+            android:layout_below="@+id/felsorolas05"
+            android:layout_marginStart="100sp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10sp"
+            app:drawableTopCompat="@drawable/concatpyimg">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas06"
+            android:layout_below="@+id/concatPython"
+            android:layout_marginTop="15sp"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:textStyle="bold"
+            android:text="@string/regexPython"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas07"
+            android:layout_below="@+id/felsorolas06"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/regexPython1"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/declareRegexPython"
+            android:layout_below="@+id/felsorolas07"
+            android:layout_marginStart="50sp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10sp"
+            app:drawableTopCompat="@drawable/regexpyimg">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/regexPython"
+            android:layout_below="@+id/declareRegexPython"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/regexOutputPy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas13"
+            android:layout_below="@+id/regexPython"
+            android:layout_marginTop="15sp"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:textStyle="bold"
+            android:text="@string/hasznositasRegexPy"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas14"
+            android:layout_below="@+id/felsorolas13"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/muveletRegexPy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas15"
+            android:layout_below="@+id/felsorolas14"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="15sp"
+            android:text="@string/examplesRegexPy"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas16"
+            android:layout_below="@+id/felsorolas15"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/regexKifejezesekPy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <Button
+            android:id="@+id/backPythonCourseList04"
+            android:layout_width="130dp"
+            android:layout_height="50dp"
+            android:layout_below="@+id/felsorolas16"
+            android:layout_marginStart="40sp"
+            android:layout_marginEnd="250sp"
+            android:layout_marginTop="20sp"
+            android:fontFamily="@font/aldrich"
+            android:text="@string/backToJavaCourseList"
+            android:textColor="@color/white"
+            app:icon="?attr/actionModeCloseDrawable" />
+
+        <Button
+            android:id="@+id/nextCoursePython04"
+            android:layout_width="190dp"
+            android:layout_height="50dp"
+            android:layout_below="@+id/felsorolas16"
+            android:layout_marginStart="190sp"
+            android:layout_marginTop="20sp"
+            android:layout_marginEnd="40sp"
+            android:fontFamily="@font/aldrich"
+            android:text="@string/filePython"
+            android:textColor="@color/white"
+            app:icon="@drawable/iconnext" />
+    </RelativeLayout>
+
+</ScrollView>
