Fájlkezelés és navigációs gombok kész

--- a/app/src/main/res/layout/activity_python_course05_file_handling.xml
+++ b/app/src/main/res/layout/activity_python_course05_file_handling.xml
@@ -1,9 +1,302 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".PythonCourse_05_FileHandlingActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/filePy"
+            android:text="@string/fajlkezelesPy"
+            android:layout_marginTop="20sp"
+            android:layout_marginStart="10sp"
+            android:layout_marginEnd="10sp"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="30sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas01"
+            android:layout_below="@+id/filePy"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/readPy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas02"
+            android:layout_below="@+id/felsorolas01"
+            android:layout_marginStart="10sp"
+            android:layout_marginEnd="10sp"
+            android:layout_marginTop="15sp"
+            android:text="@string/openFilePy"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas03"
+            android:layout_below="@+id/felsorolas02"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/openFilePython"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:id="@+id/textPython"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/felsorolas03"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="50sp"
+            android:layout_marginTop="10dp"
+            app:drawableTopCompat="@drawable/readpyimg" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas04"
+            android:layout_below="@+id/textPython"
+            android:layout_marginTop="15sp"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:textStyle="bold"
+            android:text="@string/readingPy"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas05"
+            android:layout_below="@+id/felsorolas04"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/readlinePy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/readlinePython"
+            android:layout_below="@+id/felsorolas05"
+            android:layout_marginStart="190sp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10sp"
+            app:drawableTopCompat="@drawable/readlinepyimg">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas06"
+            android:layout_below="@+id/readlinePython"
+            android:layout_marginTop="15sp"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:textStyle="bold"
+            android:text="@string/writePy"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas07"
+            android:layout_below="@+id/felsorolas06"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/writeMethodŐy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/writePython"
+            android:layout_below="@+id/felsorolas07"
+            android:layout_marginStart="60sp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10sp"
+            app:drawableTopCompat="@drawable/writepyimg">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas13"
+            android:layout_below="@+id/writePython"
+            android:layout_marginTop="15sp"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:textStyle="bold"
+            android:text="@string/closePy"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas14"
+            android:layout_below="@+id/felsorolas13"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/closePython"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas15"
+            android:layout_below="@+id/felsorolas14"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="15sp"
+            android:text="@string/withPy"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas16"
+            android:layout_below="@+id/felsorolas15"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/withExeptionPy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/withPython"
+            android:layout_below="@+id/felsorolas16"
+            android:layout_marginStart="70sp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10sp"
+            app:drawableTopCompat="@drawable/withpyimg">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas17"
+            android:layout_below="@+id/withPython"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="15sp"
+            android:text="@string/osModulePy"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas18"
+            android:layout_below="@+id/felsorolas17"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/osModulPy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/osPython"
+            android:layout_below="@+id/felsorolas18"
+            android:layout_marginStart="70sp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10sp"
+            app:drawableTopCompat="@drawable/ospyimg">
+        </TextView>
+
+        <Button
+            android:id="@+id/backPythonCourseList05"
+            android:layout_width="130dp"
+            android:layout_height="50dp"
+            android:layout_below="@+id/osPython"
+            android:layout_marginStart="40sp"
+            android:layout_marginEnd="250sp"
+            android:layout_marginTop="20sp"
+            android:fontFamily="@font/aldrich"
+            android:text="@string/backToJavaCourseList"
+            android:textColor="@color/white"
+            app:icon="?attr/actionModeCloseDrawable" />
+
+        <Button
+            android:id="@+id/nextFinalQuizPython05"
+            android:layout_width="180dp"
+            android:layout_height="50dp"
+            android:layout_below="@+id/osPython"
+            android:layout_marginStart="190sp"
+            android:layout_marginTop="20sp"
+            android:layout_marginEnd="40sp"
+            android:fontFamily="@font/aldrich"
+            android:text="@string/finalQuizPy1"
+            android:textColor="@color/white"
+            app:icon="@drawable/iconnext" />
+    </RelativeLayout>
+
+</ScrollView>
