--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -91,10 +91,10 @@
         android:layout_marginEnd="125dp"
         android:background="#702727"
         android:fontFamily="@font/aldrich"
-        android:text="@string/next"
+        android:text="@string/save1"
         android:textColor="@color/white"
-        android:textSize="16sp"
-        app:icon="@android:drawable/ic_media_play"
+        android:textSize="18sp"
+        app:icon="@android:drawable/ic_menu_save"
         app:iconTint="#FFFFFF">
 
     </Button>
